# helloDirck

./: Commander.py  backup_Commander.py  esp.py  fastMongo.py  helloF.py  mqtt.html  nginx.conf  paho_test.py  pyproject.toml  pyproject.toml.save
nginx/: nginx.conf  nginx.conf.save  nginx.conf.save.1  nginx.conf.save.2  nginx.conf.save.3  server-cert.crt  server-cert.key
nginx/conf.d/: gunicorn.conf
nginx/sites-available/: default  txgenius.direktech.co.uk
nginx/sites-enabled/: direktech.co.uk
