[tool.poetry]
name = "pouria"
version = "0.1.0"
description = ""
authors = ["pouria <po00oryasharifi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0" 
uvicorn = "^0.18.2"
motor = "^3.0.0"
pydantic = {extras = ["email"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
